--- a/hangfire-webapi/hangfire-webapi.csproj
+++ b/hangfire-webapi/hangfire-webapi.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.7.27" />
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
 
